# DataSci_HM

HM_1/HMdata1/: HM.ipynb  pyproject.toml
HM_2/HM_2Data/: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  Visualisation.ipynb  output_data.csv  pyproject.toml
HM_2/HM_2Data/.ipynb_checkpoints/: Hw2.1-checkpoint.ipynb  Hw2.2-checkpoint.ipynb  Hw2.3-checkpoint.ipynb
HM_3/HM_3Data/: HM_3.ipynb  pyproject.toml
HM_3/HM_3Data/.ipynb_checkpoints/: HM_3-checkpoint.ipynb
HM_4/HM4Data/: OverfittingHomeWork.ipynb  pyproject.toml
HM_4/HM4Data/.ipynb_checkpoints/: OverfittingHomeWork-checkpoint.ipynb
