[tool.poetry]
name = "hm-2data"
version = "0.1.0"
description = ""
authors = ["igorgroni <igorgroni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
jupyter = "^1.0.0"
notebook = "^7.0.6"
lxml = "^4.9.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
