[tool.poetry]
name = "hm-3data"
version = "0.1.0"
description = ""
authors = ["igorgroni <igorgroni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.3"
jupyter = "^1.0.0"
notebook = "^7.0.6"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
