[tool.poetry]
name = "hm4data"
version = "0.1.0"
description = ""
authors = ["igorgroni <igorgroni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "7.0.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
